[package]
name = "pentafluoride"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
enum-map = "2.7.3"
enumset = "1.1.10"
puffin = "0.19.1"
puffin_http = "0.16.1"
rand = "0.9.2"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
once_cell = "1.19.0"
ort = { version = "2.0.0-rc.11", feautres = ["load_dynamic"]}
ndarray = "0.17.2"
pyo3 = { version = "0.28.1", features = ["extension-module"] }

[lib]
name = "pentafluoride"
crate-type = ["cdylib"]
